--- a/zqoa/WebRoot/WEB-INF/log.properties
+++ b/zqoa/WebRoot/WEB-INF/log.properties
@@ -5,7 +5,7 @@ log4j.rootCategory=INFO,logfile,A1
 
 log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
 #log4j.appender.logfile.File=C:\jcdflog.log
-log4j.appender.logfile.File=${webapp.root}/WEB-INF/log/log4j.log
+log4j.appender.logfile.File=/data/logs/log4j.log
 log4j.appender.logfile.DatePattern =yyyy-MM-dd'.log' 
 log4j.appender.logfile.MaxFileSize=20MB
 log4j.appender.logfile.MaxBackupIndex=3
@@ -18,9 +18,9 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 # Spring framework log level  
 #log4j.logger.org.springframework=ERROR  
-log4j.logger.org.springframework.transaction=DEBUG 
-log4j.logger.org.springframework.beans=warn
-log4j.logger.org.springframework.binding=debug  
+log4j.logger.org.springframework.transaction=ERROR 
+log4j.logger.org.springframework.beans=ERROR
+log4j.logger.org.springframework.binding=ERROR  
 # spring modules log level  
 #log4j.logger.org.springmodules=DEBUG  
 # Hibernate log level  
