修改ftp上传工具 类，改为java7版本的上传

--- a/zqoa/src/system.properties
+++ b/zqoa/src/system.properties
@@ -35,9 +35,9 @@ depart_in_use = 要删除的部门已有用户使用,不能删除!
 #原始密码输入有误
 password_error = 原密码输入有误，修改失败!
 #ftp服务登录信息
-ftpip=192.168.1.105
+ftpip=192.168.1.104
 ftpport=21
-ftpusername=peng
-ftppassword=pengbaoxing
+ftpusername=sara
+ftppassword=123
 #索引文件地址
 filePath=d:/luence/index/zqoa/index
