合同添加solr索引

--- a/zqoa/WebRoot/WEB-INF/log.properties
+++ b/zqoa/WebRoot/WEB-INF/log.properties
@@ -17,22 +17,22 @@ log4j.appender.logfile.layout.ConversionPattern=%d [%X] %-5p - %c{1}:%m%n
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 # Spring framework log level  
-#log4j.logger.org.springframework=ERROR  
-log4j.logger.org.springframework.transaction=ERROR 
-log4j.logger.org.springframework.beans=ERROR
-log4j.logger.org.springframework.binding=ERROR  
+log4j.logger.org.springframework=INFO  
+#log4j.logger.org.springframework.transaction=INFO 
+#log4j.logger.org.springframework.beans=INFO
+#log4j.logger.org.springframework.binding=INFO  
 # spring modules log level  
 #log4j.logger.org.springmodules=DEBUG  
 # Hibernate log level  
 ###输出hibernate调试过程中的错误日志
-log4j.logger.org.hibernate=INFO
-log4j.logger.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-log4j.logger.org.hibernate.type.descriptor.sql.BasicExtractor=TRACE
-log4j.logger.org.hibernate.SQL=DEBUG
-log4j.logger.org.hibernate.engine.QueryParameters=DEBUG
-log4j.logger.org.hibernate.engine.query.HQLQueryPlan=DEBUG
+#log4j.logger.org.hibernate=INFO
+#log4j.logger.org.hibernate.type.descriptor.sql.BasicBinder=INFO
+#log4j.logger.org.hibernate.type.descriptor.sql.BasicExtractor=TRACE
+#log4j.logger.org.hibernate.SQL=INFO
+#log4j.logger.org.hibernate.engine.QueryParameters=INFO
+#log4j.logger.org.hibernate.engine.query.HQLQueryPlan=INFO
 ### 输出事务日志###
-log4j.logger.org.hibernate.transaction=debug
+#log4j.logger.org.hibernate.transaction=INFO
 #valuelist log  
 #log4j.logger.net.mlw.vlh=ERROR  
   
@@ -44,9 +44,7 @@ log4j.logger.org.hibernate.transaction=debug
 #log4j.logger.org.apache=INFO  
 # Application log level  
 #sql and execute time  
-  
-
-log4j.logger.com.opensymphony.xwork2=ERROR 
+#log4j.logger.com.opensymphony.xwork2=INFO 
 log4j.appender.A1.layout.ConversionPattern=%-d{yyyy-MM-dd HH\:mm\:ss} %-4r %-5p [%t] %37c %3x - %m%n
 
 
