全文搜索初步完成

--- a/zqoa/WebRoot/WEB-INF/log.properties
+++ b/zqoa/WebRoot/WEB-INF/log.properties
@@ -18,14 +18,14 @@ log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 # Spring framework log level  
 log4j.logger.org.springframework=INFO  
-#log4j.logger.org.springframework.transaction=INFO 
-#log4j.logger.org.springframework.beans=INFO
-#log4j.logger.org.springframework.binding=INFO  
+log4j.logger.org.springframework.transaction=ERROR 
+log4j.logger.org.springframework.beans=ERROR
+log4j.logger.org.springframework.binding=ERROR  
 # spring modules log level  
-#log4j.logger.org.springmodules=DEBUG  
+log4j.logger.org.springmodules=ERROR  
 # Hibernate log level  
 ###输出hibernate调试过程中的错误日志
-#log4j.logger.org.hibernate=INFO
+log4j.logger.org.hibernate=ERROR
 #log4j.logger.org.hibernate.type.descriptor.sql.BasicBinder=INFO
 #log4j.logger.org.hibernate.type.descriptor.sql.BasicExtractor=TRACE
 #log4j.logger.org.hibernate.SQL=INFO
